@@ -38,6 +38,8 @@ Other new features:
   o Added soxi utility to extract/display file header fields.  (robs)
   o Added pkg-config support. (Pascal Giard)
   o Added simple V.U. meter.  (robs)
+  o Added simple heuristic to detect when playing an album and set
+    the default replay-gain mode to `album'.  (robs)
 
 Bug fixes:
 
